added volume control functionality for buttons and keys

--- a/web/index.html
+++ b/web/index.html
@@ -38,14 +38,14 @@
 								<table class="rp-controls">
 									<tr>
 										<td class="up">
-											<button class="btn" onclick="">
+											<button class="btn" onclick="changeVolume(1)">
 												<img src="https://cdn0.iconfinder.com/data/icons/slim-square-icons-basics/100/basics-15-48.png" />
 											</button>
 										</td>
 									</tr>
 									<tr>
 										<td class="down">
-											<button class="btn" onclick="">
+											<button class="btn" onclick="changeVolume(-1)">
 												<img src="https://cdn0.iconfinder.com/data/icons/slim-square-icons-basics/100/basics-16-48.png" />
 											</button>
 										</td>
